--- a/src/nanoev.vcxproj
+++ b/src/nanoev.vcxproj
@@ -51,7 +51,14 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <IntDir>$(Platform)\$(Configuration)\</IntDir>
+    <OutDir>$(Platform)\$(Configuration)\</OutDir>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <OutDir>$(Platform)\$(Configuration)\</OutDir>
+    <IntDir>$(Platform)\$(Configuration)\</IntDir>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <PrecompiledHeader>
@@ -66,7 +73,11 @@
     </Link>
     <PostBuildEvent>
       <Command>if not exist ..\include md ..\include
-copy /y nanoev.h ..\include\nanoev.h</Command>
+copy /y nanoev.h ..\include\nanoev.h
+if not exist ..\lib md ..\lib
+if not exist ..\lib\$(Platform) md ..\lib\$(Platform)
+if not exist ..\lib\$(Platform)\$(Configuration) md ..\lib\$(Platform)\$(Configuration)
+copy /y $(OutDir)$(TargetFileName) ..\\lib\$(Platform)\$(Configuration)\$(TargetFileName)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -87,7 +98,11 @@ copy /y nanoev.h ..\include\nanoev.h</Command>
     </Link>
     <PostBuildEvent>
       <Command>if not exist ..\include md ..\include
-copy /y nanoev.h ..\include\nanoev.h</Command>
+copy /y nanoev.h ..\include\nanoev.h
+if not exist ..\lib md ..\lib
+if not exist ..\lib\$(Platform) md ..\lib\$(Platform)
+if not exist ..\lib\$(Platform)\$(Configuration) md ..\lib\$(Platform)\$(Configuration)
+copy /y $(OutDir)$(TargetFileName) ..\\lib\$(Platform)\$(Configuration)\$(TargetFileName)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
