--- a/src/nanoev.vcxproj.filters
+++ b/src/nanoev.vcxproj.filters
@@ -37,5 +37,8 @@
     <ClCompile Include="nanoev_timer.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="nanoev_udp.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
