--- a/src/nanoev.vcxproj.filters
+++ b/src/nanoev.vcxproj.filters
@@ -14,6 +14,9 @@
     <ClInclude Include="nanoev_internal.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="nanoev.hpp">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="nanoev_loop.c">
