--- a/test/http_client/http_client.vcxproj
+++ b/test/http_client/http_client.vcxproj
@@ -181,11 +181,13 @@ copy /y $(OutDir)$(TargetFileName) ..\..\bin\$(Platform)\$(Configuration)\$(Targ
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="event_thread.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="http_client.cpp" />
+    <ClCompile Include="event_thread.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
