--- a/test/http_client/http_client.vcxproj.filters
+++ b/test/http_client/http_client.vcxproj.filters
@@ -17,6 +17,18 @@
     <ClInclude Include="event_thread.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="http_client.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="http_parser\http_parser.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="handler.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="conn_pool.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -26,6 +38,15 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="http_client.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="http_parser\http_parser.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="conn_pool.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
