--- a/test/http_client/http_client.vcxproj
+++ b/test/http_client/http_client.vcxproj
@@ -186,6 +186,7 @@ copy /y $(OutDir)$(TargetFileName) ..\..\bin\$(Platform)\$(Configuration)\$(Targ
     <ClInclude Include="handler.h" />
     <ClInclude Include="http_client.h" />
     <ClInclude Include="http_parser\http_parser.h" />
+    <ClInclude Include="rate_limit.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -200,6 +201,7 @@ copy /y $(OutDir)$(TargetFileName) ..\..\bin\$(Platform)\$(Configuration)\$(Targ
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="rate_limit.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
