--- a/test/http_client/http_client.vcxproj.filters
+++ b/test/http_client/http_client.vcxproj.filters
@@ -29,6 +29,9 @@
     <ClInclude Include="conn_pool.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="rate_limit.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -47,6 +50,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="conn_pool.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="rate_limit.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
