Preparing to support linux/bsd

--- a/src/Makefile
+++ b/src/Makefile
@@ -6,6 +6,9 @@ SOURCES= \
 	nanoev_timer.c \
 	nanoev_misc.c \
 	nanoev_internal_unix.c \
+	nanoev_tcp.c \
+	nanoev_udp.c \
+	nanoev_loop.c
 
 OBJECTS= $(subst .c,.o,$(SOURCES))
 
