--- a/src/nanoev.vcxproj
+++ b/src/nanoev.vcxproj
@@ -22,6 +22,7 @@
     <ClInclude Include="nanoev.h" />
     <ClInclude Include="nanoev.hpp" />
     <ClInclude Include="nanoev_internal.h" />
+    <ClInclude Include="nanoev_poller.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="nanoev_async.c" />
@@ -30,6 +31,8 @@
     <ClCompile Include="nanoev_lib.c" />
     <ClCompile Include="nanoev_loop.c" />
     <ClCompile Include="nanoev_misc.c" />
+    <ClCompile Include="nanoev_poller.c" />
+    <ClCompile Include="nanoev_poller_iocp.c" />
     <ClCompile Include="nanoev_tcp.c" />
     <ClCompile Include="nanoev_timer.c" />
     <ClCompile Include="nanoev_udp.c" />
