--- a/test/udp_test/Makefile
+++ b/test/udp_test/Makefile
@@ -3,12 +3,13 @@ PROG= udp_test
 INCLUDES= -I../../include
 
 LIBDIR= -L../../src
+LIBFILE= ../../src/libnanoev.a
 
 SOURCES= udp_test.c
 
 OBJECTS= $(subst .c,.o,$(SOURCES))
 
-$(PROG): $(OBJECTS)
+$(PROG): $(OBJECTS) $(LIBFILE)
 	$(CC) $(CFLAGS) $(INCLUDES) $(LIBDIR) -lnanoev -o $@ $(OBJECTS)
 	
 %.o: %.c
@@ -19,4 +20,3 @@ $(PROG): $(OBJECTS)
 clean:
 	rm -f $(OBJECTS)
 	rm -f $(PROG)
-
