--- a/src/nanoev.vcxproj
+++ b/src/nanoev.vcxproj
@@ -108,19 +108,17 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>..\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PostBuildEvent>
-      <Command>if not exist ..\include md ..\include
-copy /y nanoev.h ..\include\nanoev.h
-copy /y nanoev.hpp ..\include\nanoev.hpp
-if not exist ..\lib md ..\lib
+      <Command>if not exist ..\lib md ..\lib
 if not exist ..\lib\$(Platform) md ..\lib\$(Platform)
 if not exist ..\lib\$(Platform)\$(Configuration) md ..\lib\$(Platform)\$(Configuration)
-copy /y $(OutDir)$(TargetFileName) ..\\lib\$(Platform)\$(Configuration)\$(TargetFileName)</Command>
+copy /y $(OutDir)$(TargetFileName) ..\lib\$(Platform)\$(Configuration)\$(TargetFileName)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -130,19 +128,17 @@ copy /y $(OutDir)$(TargetFileName) ..\\lib\$(Platform)\$(Configuration)\$(Target
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>..\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PostBuildEvent>
-      <Command>if not exist ..\include md ..\include
-copy /y nanoev.h ..\include\nanoev.h
-copy /y nanoev.hpp ..\include\nanoev.hpp
-if not exist ..\lib md ..\lib
+      <Command>if not exist ..\lib md ..\lib
 if not exist ..\lib\$(Platform) md ..\lib\$(Platform)
 if not exist ..\lib\$(Platform)\$(Configuration) md ..\lib\$(Platform)\$(Configuration)
-copy /y $(OutDir)$(TargetFileName) ..\\lib\$(Platform)\$(Configuration)\$(TargetFileName)</Command>
+copy /y $(OutDir)$(TargetFileName) ..\lib\$(Platform)\$(Configuration)\$(TargetFileName)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -154,6 +150,7 @@ copy /y $(OutDir)$(TargetFileName) ..\\lib\$(Platform)\$(Configuration)\$(Target
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>..\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -162,13 +159,10 @@ copy /y $(OutDir)$(TargetFileName) ..\\lib\$(Platform)\$(Configuration)\$(Target
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
     <PostBuildEvent>
-      <Command>if not exist ..\include md ..\include
-copy /y nanoev.h ..\include\nanoev.h
-copy /y nanoev.hpp ..\include\nanoev.hpp
-if not exist ..\lib md ..\lib
+      <Command>if not exist ..\lib md ..\lib
 if not exist ..\lib\$(Platform) md ..\lib\$(Platform)
 if not exist ..\lib\$(Platform)\$(Configuration) md ..\lib\$(Platform)\$(Configuration)
-copy /y $(OutDir)$(TargetFileName) ..\\lib\$(Platform)\$(Configuration)\$(TargetFileName)</Command>
+copy /y $(OutDir)$(TargetFileName) ..\lib\$(Platform)\$(Configuration)\$(TargetFileName)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -180,6 +174,7 @@ copy /y $(OutDir)$(TargetFileName) ..\\lib\$(Platform)\$(Configuration)\$(Target
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>..\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -188,13 +183,10 @@ copy /y $(OutDir)$(TargetFileName) ..\\lib\$(Platform)\$(Configuration)\$(Target
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
     <PostBuildEvent>
-      <Command>if not exist ..\include md ..\include
-copy /y nanoev.h ..\include\nanoev.h
-copy /y nanoev.hpp ..\include\nanoev.hpp
-if not exist ..\lib md ..\lib
+      <Command>if not exist ..\lib md ..\lib
 if not exist ..\lib\$(Platform) md ..\lib\$(Platform)
 if not exist ..\lib\$(Platform)\$(Configuration) md ..\lib\$(Platform)\$(Configuration)
-copy /y $(OutDir)$(TargetFileName) ..\\lib\$(Platform)\$(Configuration)\$(TargetFileName)</Command>
+copy /y $(OutDir)$(TargetFileName) ..\lib\$(Platform)\$(Configuration)\$(TargetFileName)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
